Real Author name added

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	</div>
 
 	<div id="boxAbout">
-		<p>Game created for web game programming subject by:-</p>
-		<h1>Dipen Patel - 300685173</h1>
+		<p>Game created by:-</p>
+		<h1>Nalin Kanwar (aka nkk)</h1>
 		<a href="#" id="btnBack3">Back</a>
 	</div>
 	
